@@ -1,4 +1,5 @@
 import java.util.List;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
@@ -7,7 +8,9 @@ class Solution {
 
     private static String solve(String input) {
         var lines = List.of(input.split("\n\n"));
-        var elves = lines.stream().map(line -> Stream.of(line.split("\n")).flatMapToInt(s -> IntStream.of(Integer.parseInt(s))).sum()).toList();
+        var elves = lines.stream()
+                .map(line -> Stream.of(line.split("\n")).flatMapToInt(s -> IntStream.of(Integer.parseInt(s))).sum())
+                .collect(Collectors.toList());
         var biggestElf = elves.stream().max(Integer::compare).get();
         return biggestElf.toString();
     };
@@ -19,4 +22,3 @@ class Solution {
         System.out.println("_duration: " + (System.currentTimeMillis() - startTime) + "\n" + result);
     }
 }
-
